# scriptium-database-builder

./: CMakeLists.txt  main.cpp
Constants/: Constants.h
Extractor/Builder/: Builder.cpp  Builder.h
Extractor/Loader/: Loader.h
Extractor/Miner/: Miner.cpp  Miner.h
Extractor/Validator/: Validator.cpp  Validator.h
Factories/AbstractFactories/ChapterFactory/: ChapterFactory.cpp  ChapterFactory.h
Factories/AbstractFactories/Definitions/Factory/: Factory.cpp  Factory.h
Factories/AbstractFactories/Definitions/MultipleFactory/: MultipleFactory.cpp  MultipleFactory.h
Factories/AbstractFactories/Definitions/SingleFactory/: SingleFactory.cpp  SingleFactory.h
Factories/AbstractFactories/RootFactory/: RootFactory.cpp  RootFactory.h
Factories/AbstractFactories/ScriptureFactory/: ScriptureFactory.cpp  ScriptureFactory.h
Factories/AbstractFactories/SectionFactory/: SectionFactory.cpp  SectionFactory.h
Factories/AbstractFactories/VerseFactory/: VerseFactory.cpp  VerseFactory.h
Factories/AbstractFactories/WordFactory/: WordFactory.cpp  WordFactory.h
Factories/ConcreteFactories/JudaismFactory/Torah/Torah/: Torah.cpp  Torah.h
Factories/ConcreteFactories/JudaismFactory/Torah/TorahChapterAssembled/: TorahChapterAssembled.cpp  TorahChapterAssembled.h
Factories/ConcreteFactories/JudaismFactory/Torah/TorahChapterFactory/: TorahChapterFactory.cpp  TorahChapterFactory.h
Factories/ConcreteFactories/JudaismFactory/Torah/TorahFactory/: TorahFactory.cpp  TorahFactory.h
Factories/ConcreteFactories/JudaismFactory/Torah/TorahRawChapter/: TorahRawChapter.cpp  TorahRawChapter.h
Factories/ConcreteFactories/JudaismFactory/Torah/TorahRawChapterOfWordFile/: TorahRawChapterOfWordFile.cpp  TorahRawChapterOfWordFile.h
Factories/ConcreteFactories/JudaismFactory/Torah/TorahRawVerse/: TorahRawVerse.cpp  TorahRawVerse.h
Factories/ConcreteFactories/JudaismFactory/Torah/TorahRawVerseOfWordFile/: TorahRawVerseOfWordFile.cpp  TorahRawVerseOfWordFile.h
Factories/ConcreteFactories/JudaismFactory/Torah/TorahRawWord/: TorahRawWord.cpp  TorahRawWord.h
Factories/ConcreteFactories/JudaismFactory/Torah/TorahRootFactory/: TorahRootFactory.cpp  TorahRootFactory.h
Factories/ConcreteFactories/JudaismFactory/Torah/TorahRootRepository/: TorahRootRepository.cpp  TorahRootRepository.h
Factories/ConcreteFactories/JudaismFactory/Torah/TorahSectionAssembled/: TorahSectionAssembled.cpp  TorahSectionAssembled.h
Factories/ConcreteFactories/JudaismFactory/Torah/TorahSectionFactory/: TorahSectionFactory.cpp  TorahSectionFactory.h
Factories/ConcreteFactories/JudaismFactory/Torah/TorahSectionPackage/: TorahSectionPackage.cpp  TorahSectionPackage.h
Factories/ConcreteFactories/JudaismFactory/Torah/TorahSectionPackageAssembler/: TorahSectionPackageAssembler.cpp  TorahSectionPackageAssembler.h
Factories/ConcreteFactories/JudaismFactory/Torah/TorahSectionPackageManager/: TorahSectionPackageManager.cpp  TorahSectionPackageManager.h
Factories/ConcreteFactories/JudaismFactory/Torah/TorahSectionPackageReader/: TorahSectionPackageReader.cpp  TorahSectionPackageReader.h
Factories/ConcreteFactories/JudaismFactory/Torah/TorahSectionWordFile/: TorahSectionWordFile.cpp  (+1 more)
Indicators/ChapterIndicator/: ChapterIndicator.cpp  ChapterIndicator.h
Indicators/ScriptureIndicator/: ScriptureIndicator.cpp  ScriptureIndicator.h
Indicators/SectionIndicator/: SectionIndicator.cpp  SectionIndicator.h
Indicators/VerseIndicator/: VerseIndicator.cpp  VerseIndicator.h
Inspectors/ScriptureInspector/: ScriptureInspector.cpp  ScriptureInspector.h
Model/Chapter/: Chapter.cpp  Chapter.h
Model/ChapterMeaning/: ChapterMeaning.cpp  ChapterMeaning.h
Model/Language/: Language.cpp  Language.h
Model/Root/: Root.cpp  Root.h
Model/Scripture/: Scripture.cpp  Scripture.h
Model/ScriptureMeaning/: ScriptureMeaning.cpp  ScriptureMeaning.h
Model/Section/: Section.cpp  Section.h
Model/SectionMeaning/: SectionMeaning.cpp  SectionMeaning.h
Model/Transliteration/: Transliteration.cpp  Transliteration.h
Model/Verse/: Verse.cpp  Verse.h
Model/Word/: Word.cpp  Word.h
ModelHierarchies/ScriptureHierarchy/Chapter/: Chapter.cpp  Chapter.h
ModelHierarchies/ScriptureHierarchy/ChapterMeaning/: ChapterMeaning.cpp  ChapterMeaning.h
ModelHierarchies/ScriptureHierarchy/Language/: Language.cpp  Language.h
ModelHierarchies/ScriptureHierarchy/Meaning/: Meaning.cpp  Meaning.h
ModelHierarchies/ScriptureHierarchy/Root/: Root.cpp  Root.h
ModelHierarchies/ScriptureHierarchy/Scripture/: Scripture.cpp  Scripture.h
ModelHierarchies/ScriptureHierarchy/ScriptureMeaning/: ScriptureMeaning.cpp  ScriptureMeaning.h
ModelHierarchies/ScriptureHierarchy/Section/: Section.cpp  Section.h
ModelHierarchies/ScriptureHierarchy/SectionMeaning/: SectionMeaning.cpp  SectionMeaning.h
ModelHierarchies/ScriptureHierarchy/Transliteration/: Transliteration.cpp  Transliteration.h
ModelHierarchies/ScriptureHierarchy/Verse/: Verse.cpp  Verse.h
ModelHierarchies/ScriptureHierarchy/Word/: Word.cpp  Word.h
ModelHierarchies/TranslationHierarchy/Footnote/: Footnote.cpp  Footnote.h
ModelHierarchies/TranslationHierarchy/Translation/: Translation.cpp  Translation.h
ModelHierarchies/TranslationHierarchy/TranslationText/: TranslationText.cpp  TranslationText.h
ModelHierarchies/TranslationHierarchy/Translator/: Translator.cpp  Translator.h
SearchStrategies/ExtractionStrategy/Builder/: Builder.cpp  Builder.h
SearchStrategies/ExtractionStrategy/Loader/: Loader.cpp  Loader.h
SearchStrategies/ExtractionStrategy/Miner/: Miner.cpp  Miner.h
SearchStrategies/ExtractionStrategy/Validator/: Validator.cpp  Validator.h
Utils/Logger/: Logger.cpp  Logger.h
Writers/ChapterWriter/: ChapterWriter.cpp  ChapterWriter.h
Writers/DatabasePool/: DatabasePool.cpp  DatabasePool.h
Writers/RootWriter/: RootWriter.cpp  RootWriter.h
Writers/ScriptureWriter/: ScriptureWriter.cpp  ScriptureWriter.h
Writers/SectionWriter/: SectionWriter.cpp  SectionWriter.h
Writers/VerseWriter/: VerseWriter.cpp  VerseWriter.h
Writers/WordWriter/: WordWriter.cpp  WordWriter.h
(+20 files in other folders)
